<?xml version="1.0"?>
<!--
  ~ This file is part of Dependency-Track.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  ~ SPDX-License-Identifier: Apache-2.0
  ~ Copyright (c) OWASP Foundation. All Rights Reserved.
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>org.dependencytrack</groupId>
  <artifactId>hyades</artifactId>
  <version>0.7.0-alpha.3-SNAPSHOT</version>
  <packaging>pom</packaging>

  <modules>
    <module>proto</module>
    <module>e2e</module>
  </modules>

  <licenses>
    <license>
      <name>Apache-2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <scm>
    <connection>${scm.connection}</connection>
    <developerConnection>${scm.developer.connection}</developerConnection>
    <url>${scm.url}</url>
    <tag>HEAD</tag>
  </scm>

  <properties>
    <!-- General Project Properties -->
    <compiler-plugin.version>3.15.0</compiler-plugin.version>
    <maven.compiler.release>21</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <project.parentBaseDir>.</project.parentBaseDir>

    <!-- Dependency Versions -->
    <lib.assertj.version>3.27.7</lib.assertj.version>
    <lib.checkstyle.version>13.3.0</lib.checkstyle.version>
    <lib.greenmail.version>2.1.8</lib.greenmail.version>
    <lib.minio.version>8.6.0</lib.minio.version>
    <lib.open-feign.version>13.9.3</lib.open-feign.version>
    <lib.protobuf-java.version>4.34.0</lib.protobuf-java.version>
    <lib.wiremock.version>2.35.2</lib.wiremock.version>
    <quarkus.platform.version>3.32.3</quarkus.platform.version>

    <!-- Plugin Versions -->
    <plugin.protoc-jar.version>3.11.4</plugin.protoc-jar.version>

    <!-- Tool Versions -->
    <tool.protoc.version>com.google.protobuf:protoc:${lib.protobuf-java.version}</tool.protoc.version>

    <!-- Default SCM Properties -->
    <scm.connection>scm:git:ssh://git@github.com/DependencyTrack/hyades.git</scm.connection>
    <scm.developer.connection>scm:git:ssh://git@github.com/DependencyTrack/hyades.git</scm.developer.connection>
    <scm.url>https://github.com/DependencyTrack/hyades.git</scm.url>

    <skipITs>true</skipITs>
    <surefire-plugin.version>3.5.5</surefire-plugin.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.quarkus</groupId>
        <artifactId>quarkus-bom</artifactId>
        <version>${quarkus.platform.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>com.google.protobuf</groupId>
        <artifactId>protobuf-java</artifactId>
        <version>${lib.protobuf-java.version}</version>
      </dependency>

      <dependency>
        <groupId>io.minio</groupId>
        <artifactId>minio</artifactId>
        <version>${lib.minio.version}</version>
      </dependency>

      <dependency>
        <groupId>com.github.tomakehurst</groupId>
        <artifactId>wiremock-jre8-standalone</artifactId>
        <version>${lib.wiremock.version}</version>
      </dependency>

      <dependency>
        <groupId>io.github.openfeign</groupId>
        <artifactId>feign-core</artifactId>
        <version>${lib.open-feign.version}</version>
      </dependency>
      <dependency>
        <groupId>io.github.openfeign</groupId>
        <artifactId>feign-jackson</artifactId>
        <version>${lib.open-feign.version}</version>
      </dependency>
      <dependency>
        <groupId>io.github.openfeign</groupId>
        <artifactId>feign-jaxrs3</artifactId>
        <version>${lib.open-feign.version}</version>
      </dependency>

      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>${lib.assertj.version}</version>
      </dependency>
      <dependency>
        <groupId>com.icegreen</groupId>
        <artifactId>greenmail-junit5</artifactId>
        <version>${lib.greenmail.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${compiler-plugin.version}</version>
          <configuration>
            <compilerArgs>
              <arg>-parameters</arg>
            </compilerArgs>
          </configuration>
        </plugin>

        <plugin>
          <groupId>com.github.os72</groupId>
          <artifactId>protoc-jar-maven-plugin</artifactId>
          <version>${plugin.protoc-jar.version}</version>
        </plugin>

        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${surefire-plugin.version}</version>
          <configuration>
            <argLine>
              @{argLine}
              --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
              -Dquarkus.log.level=WARN
              -Dquarkus.log.category.\"org.dependencytrack\".level=INFO
              -Xmx2g
            </argLine>
            <systemPropertyVariables>
              <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
            </systemPropertyVariables>
          </configuration>
        </plugin>

        <plugin>
          <artifactId>maven-failsafe-plugin</artifactId>
          <version>${surefire-plugin.version}</version>
          <executions>
            <execution>
              <goals>
                <goal>integration-test</goal>
                <goal>verify</goal>
              </goals>
              <configuration>
                <argLine>
                  @{argLine}
                  --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
                  -Dquarkus.log.level=WARN
                  -Dquarkus.log.category.\"org.dependencytrack\".level=INFO
                  -Xmx2g
                </argLine>
                <includes>
                  <include>**/*IT.java</include>
                  <include>**/*E2ET.java</include>
                </includes>
                <systemPropertyVariables>
                  <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                </systemPropertyVariables>
              </configuration>
            </execution>
          </executions>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-release-plugin</artifactId>
          <version>3.3.1</version>
          <configuration>
            <tagNameFormat>@{project.version}</tagNameFormat>
            <autoVersionSubmodules>true</autoVersionSubmodules>
            <pushChanges>true</pushChanges>
            <localCheckout>true</localCheckout>
            <releaseProfiles>quick</releaseProfiles>
            <preparationGoals>clean verify -Pquick</preparationGoals>
            <completionGoals>clean</completionGoals>
            <signTag>false</signTag>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>3.6.0</version>
        <configuration>
          <configLocation>${project.parentBaseDir}/.checkstyle.xml</configLocation>
          <includeTestSourceDirectory>true</includeTestSourceDirectory>
          <includeResources>false</includeResources>
          <includeTestResources>false</includeTestResources>
          <propertyExpansion>
            parentBaseDir=${project.parentBaseDir}
          </propertyExpansion>
        </configuration>
        <executions>
          <execution>
            <phase>validate</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
        <dependencies>
          <dependency>
            <groupId>com.puppycrawl.tools</groupId>
            <artifactId>checkstyle</artifactId>
            <version>${lib.checkstyle.version}</version>
          </dependency>
        </dependencies>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>quick</id>
      <properties>
        <checkstyle.skip>true</checkstyle.skip>
        <jacoco.skip>true</jacoco.skip>
        <maven.test.skip>true</maven.test.skip>
      </properties>
    </profile>

    <profile>
      <!--
        When running in GitHub Actions, the SCM connection must be via HTTPS
        so that the GITHUB_TOKEN injected by Actions can be used to authenticate.
        In other environments, SSH keys should be used instead.

        Additionally, this allows for SCM connections to be dependent on the
        repository the GHA workflow is executed on, making it possible to test
        the e.g. the release process in forks, without having to modify the POM.

        For details on the environment variables used, see:
          https://docs.github.com/en/actions/learn-github-actions/variables#default-environment-variables
      -->
      <id>github-actions</id>
      <activation>
        <property>
          <name>env.GITHUB_ACTIONS</name>
          <value>true</value>
        </property>
      </activation>
      <properties>
        <scm.connection>scm:git:https://github.com/${env.GITHUB_REPOSITORY}.git</scm.connection>
        <scm.developer.connection>scm:git:https://github.com/${env.GITHUB_REPOSITORY}.git</scm.developer.connection>
        <scm.url>https://github.com/${env.GITHUB_REPOSITORY}.git</scm.url>
      </properties>
    </profile>
  </profiles>
</project>
